Создал разметку HTML файла index.html для проекта Техномарт

--- a/index.html
+++ b/index.html
@@ -2,23 +2,257 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet">
+        <title>Техномарт</title>
     </head>
     <body>
-        <div class="page">
-            <header class="header">
-                header
-            </header>
-            <div class="content">
-                <aside class="sidebar">
-                    sidebar
-                </aside>
-                <main class="main">
-                    content
-                </main>
+        <header>
+            <section>
+                <span>
+                    Техномарт
+                </span>
+                <form name="test" method="post" action="input1.php">
+                    <p>
+                        Поиск по сайту
+                        <input type="text" name="Поиск:">
+                    </p>
+                </form>
+                <ul>
+                    <li><a href="#">Закладки:0</a></li>
+                    <li><a href="#">Корзина:0</a></li>
+                </ul>
+                <span><a href="#">Оформить заказ</a></span>
+            </section>
+            <section>
+                <h1>Интернет-магазин строительных материалов и инстументов для ремонта</h1>
+                <p>+7(812)555-05-55</p>
+                <p>г.Санкт-Петербург,ул.Б.Конюшенная,д.19/8</p>
+                <button>
+                    Войти
+                </button>
+                <button>
+                    Регистрация
+                </button>
+            </section>
+            <nav>
+                <ul>
+                    <li>Главная</li>
+                    <li>Компания</li>
+                    <li>Каталог</li>
+                    <li>Новости</li>
+                    <li>Спецпредложения</li>
+                    <li>Доставка</li>
+                    <li>Контакты</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h2>Асортимент</h2>
+                <div>
+                    <p>Материалы</p>
+                    <span>НА ЛЮБОЙ ВКУС</span>
+                    <img src="">
+                    <img src="">
+                </div>
+                <div>
+                    <p>Инструмент</p>
+                    <span>НА ВСЕ СЛУЧАИ</span>
+                    <img src="">
+                </div>
+                <div>
+                    <p>Техника</p>
+                    <span>ДЛЯ СТРОЙКИ</span>
+                    <img src="">
+                </div>
+            </section>
+            <section>
+                <div>
+                    <p>Дрели</p>
+                    <p>Соседям на радость!</p>
+                    <img src="">
+                    <a href="#">ОТКРЫТЬ КАТАЛОГ</a>
+                </div>
+                <div>
+                    <p>Скидки 50%</p>
+                    <span>НА 350 ТОВАРОВ</span>
+                    <img src="">
+                </div>
+                <div>
+                    <p>Доставка</p>
+                    <span>БЕСПЛАТНО</span>
+                    <img src="">
+                </div>
+            </section>
+            <section>
+                <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
+                <span><a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a></span>
+            </section>
+            <section>
+                <h2>Список популярных товаров</h2>
+                <div>
+                    <img src="">
+                    <p>Перфоратор BOSCH BFG 9000</p>
+                    <p>32500 Р.</p>
+                    <span>
+                        <a href="">22500 Р.</a>
+                    </span>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Перфоратор BOSCH BFG 3000</p>
+                    <p>22500 Р.</p>
+                    <span>
+                        <a href="">15500 Р.</a>
+                    </span>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Перфоратор BOSCH BFG 6000</p>
+                    <p>30500 Р.</p>
+                    <span>
+                        <a href="">25500 Р.</a>
+                    </span>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Перфоратор BOSCH BFG 2000</p>
+                    <span>
+                        <a href="">12500 Р.</a>
+                    </span>
+                </div>
+            </section>
+            <section>
+                <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
+                <a href="">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+            </section>
+            <section>
+                <h2>Список производителей</h2>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <img src="">
+                </div>
+            </section>
+            <section>
+                <h2>Сервисы</h2>
+                <p>
+                    Хороший интернет-иагазин отличается от плохого не только ценами!<br>
+                    Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными!
+                </p>
+                <ul>
+                    <li>Доставка</li>
+                    <li>Гарантия</li>
+                    <li>Кредит</li>
+                </ul>
+                <p>ДОСТАВКА</p>
+                <p>
+                    Мы с удовольствием доставим ваш товар прямо<br>
+                    к вашему подъезду совершенно бесплатно!<br>
+                    Ведь мы неплохо заработаем,<br>
+                    поднимая его на ваш этаж!
+                </p>
+                <img src="">
+            </section>
+            <section>
+                <div>
+                    <h2>КОМПАНИЯ ТЕХНОМАРТ</h2>
+                    <p>
+                        Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и
+                        строительства не оставит равнодушными любителей сэкономить на гастрабайтерах.
+                    </p>
+                    <p>
+                        Мы можем доставить ваш товар в самые отдалённые точки России!
+                        Техномарт работает со многими транспортными компаниями:
+                    </p>
+                    <ul>
+                        <li>Деловые линии</li>
+                        <li>Автотрейдинг</li>
+                        <li>ЖелДорЭкспедиция</li>
+                    </ul>
+                    <a href="">ПОДРОБНЕЕ О КОМПАНИИ</a>
+                </div>
+                <div>
+                    <h2>КОНТАКТЫ</h2>
+                    <p>
+                        Вы можете забрать товар сами,<br>
+                        заехав в наш офис
+                    </p>
+                    <img src="">
+                    <button>
+                        Заблудились? Напишите нам!
+                    </button>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div>
+                <span>ТЕХНОМАРТ</span>
+                <nav>
+                <ul>
+                    <li>Компания</li>
+                    <li>Новости</li>
+                    <li>Каталог</li>
+                    <li>Доставка</li>
+                    <li>Контакты</li>
+                </ul>
+                </nav>
             </div>
-            <footer class="footer">
-                footer
-            </footer>
-        </div>
+            <div>
+                <p>
+                    г.Санкт-Петербург,ул.Б.Конюшенная,д.19/8 <br>
+                    +7 (812) 555-05-55
+                </p>
+                <nav>
+                    <ul>
+                        <li>Материалы</li>
+                        <li>Техника</li>
+                        <li>Инструмент</li>
+                        <li>Спецпредложения</li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <p>
+                    2010-2017 Компания Техномарт <br>
+                    Все права защишены
+                </p>
+                <ul>
+                    <li><img src=""></li>
+                    <li><img src=""></li>
+                    <li><img src=""></li>
+                </ul>
+                <p>
+                    Обратная связь:
+                </p>
+                <a href="">
+                    mail@mail.com
+                </a>
+                <p>
+                    Разработано -
+                </p>
+                <a href="">
+                    htmlacademy.ru
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
